src_old/objects/Certification__c.object
<CustomObject>
    <description>Certification defines the standard list of certifications. Certifications are related to a Project Service Certification and a Retailer Service Certification.</description>
    <fields>
        <fullName>CertificationCode__c</fullName>
        <label>DEPRACATED - Certification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>